--- a/work.html
+++ b/work.html
@@ -50,59 +50,7 @@
                 </div>
 
                 <div class="work-gallery-grid">
-                    <!-- 1. iLink Insurance -->
-                    <a href="https://www.ilinkinsurance.com.au/" target="_blank" class="project-card">
-                        <div class="project-image-wrapper">
-                            <img src="assets/images/ilink.webp" alt="iLink Insurance" width="1024" height="434"
-                                loading="lazy">
-                        </div>
-                        <div class="project-overlay">
-                            <span class="project-cat">Insurance / Web App</span>
-                            <h3 class="project-title">iLink Insurance</h3>
-                            <span class="project-arrow">&nearr;</span>
-                        </div>
-                    </a>
-
-                    <!-- 2. Studio XAI -->
-                    <a href="https://studioxai.global/" target="_blank" class="project-card">
-                        <div class="project-image-wrapper">
-                            <img src="assets/images/studioxai.webp" alt="Studio XAI" width="1024" height="466"
-                                loading="lazy">
-                        </div>
-                        <div class="project-overlay">
-                            <span class="project-cat">AI / Technology</span>
-                            <h3 class="project-title">Studio XAI</h3>
-                            <span class="project-arrow">&nearr;</span>
-                        </div>
-                    </a>
-
-                    <!-- 3. Food Truck Insurance -->
-                    <a href="https://foodtruckinsurance.com.au/" target="_blank" class="project-card">
-                        <div class="project-image-wrapper">
-                            <img src="assets/images/foodtruck.webp" alt="Food Truck Insurance" width="1024" height="467"
-                                loading="lazy">
-                        </div>
-                        <div class="project-overlay">
-                            <span class="project-cat">Niche Insurance</span>
-                            <h3 class="project-title">Food Truck Ins.</h3>
-                            <span class="project-arrow">&nearr;</span>
-                        </div>
-                    </a>
-
-                    <!-- 4. Plant Machinery -->
-                    <a href="http://plantmachineryinsurance.com.au/" target="_blank" class="project-card">
-                        <div class="project-image-wrapper">
-                            <img src="assets/images/machinery.webp" alt="Plant Machinery Insurance" width="1024"
-                                height="462" loading="lazy">
-                        </div>
-                        <div class="project-overlay">
-                            <span class="project-cat">Industrial / Corporate</span>
-                            <h3 class="project-title">Plant Machinery</h3>
-                            <span class="project-arrow">&nearr;</span>
-                        </div>
-                    </a>
-
-                    <!-- 5. Rose of Australia -->
+                    <!-- 1. Rose of Australia -->
                     <a href="https://roseofaustraliahotel.com.au/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
                             <img src="assets/images/rosehotel.webp" alt="Rose of Australia Hotel" width="1024"
@@ -115,7 +63,72 @@
                         </div>
                     </a>
 
-                    <!-- 6. Space Designs -->
+                    <!-- 2. Boston Renal -->
+                    <a href="https://bostonrenal.com/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/boston_renal.png" alt="Boston Renal" width="1024" height="447"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Medical / Healthcare</span>
+                            <h3 class="project-title">Boston Renal</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 3. iLink Insurance -->
+                    <a href="https://www.ilinkinsurance.com.au/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/ilink.webp" alt="iLink Insurance" width="1024" height="434"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Insurance / Web App</span>
+                            <h3 class="project-title">iLink Insurance</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 4. Studio XAI -->
+                    <a href="https://studioxai.global/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/studioxai.webp" alt="Studio XAI" width="1024" height="466"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">AI / Technology</span>
+                            <h3 class="project-title">Studio XAI</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 5. Food Truck Insurance -->
+                    <a href="https://foodtruckinsurance.com.au/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/foodtruck.webp" alt="Food Truck Insurance" width="1024" height="467"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Niche Insurance</span>
+                            <h3 class="project-title">Food Truck Ins.</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 6. Plant Machinery -->
+                    <a href="http://plantmachineryinsurance.com.au/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/machinery.webp" alt="Plant Machinery Insurance" width="1024"
+                                height="462" loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Industrial / Corporate</span>
+                            <h3 class="project-title">Plant Machinery</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 7. Space Designs -->
                     <a href="http://spacedesigns.net/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
                             <img src="assets/images/spacedesigns.webp" alt="Space Designs" width="1024" height="461"
@@ -128,7 +141,7 @@
                         </div>
                     </a>
 
-                    <!-- 7. Clinic GP -->
+                    <!-- 8. Clinic GP -->
                     <a href="https://clinicgp.com/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
                             <img src="assets/images/clinic.webp" alt="Clinic GP" width="1024" height="465"
@@ -141,7 +154,7 @@
                         </div>
                     </a>
 
-                    <!-- 8. SCITR -->
+                    <!-- 9. SCITR -->
                     <a href="https://scitr.edu.in/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
                             <img src="assets/images/scitr.webp" alt="SCITR" width="1024" height="452" loading="lazy">
